Support #37033 - Query builder object store display issues
- Text overflow is now adds ellipsis (...) when too long.
- Hovering over the column will expand it to the full text.

--- a/packages/common-ui/common-ui-style.scss
+++ b/packages/common-ui/common-ui-style.scss
@@ -394,8 +394,7 @@ input[type="number"]::-webkit-outer-spin-button {
  */
 .react-table-overflow .rt-td, 
 .react-table-overflow .rt-tbody, 
-.react-table-overflow .rt-table,
-.react-table-overflow th {
+.react-table-overflow .rt-table {
   overflow: visible !important;
 }
 
